# libretro_core_glad_lua

./: CMakeLists.txt  README.md  build.bat  run.bat  script.lua
assets/: script.lua
include/: libretro_core.h  module_lua.h  module_opengl.h
scripts/: custom_quad.lua  draw_quad.lua  helloworld_text2d.lua  sample00.lua
src/: lib.c  module_lua.c  module_opengl.c
